--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     function calculate() {
         //查找文档中用于输入输出的元素
 
-        var pinggu = document.getElementById("pinggu");
+        // var pinggu = document.getElementById("pinggu");
         var amount = document.getElementById("amount");
         var apr = document.getElementById("apr");
         var hetong = document.getElementById("hetong");
@@ -128,7 +128,7 @@
         //将百分比格式转换为小数格式，并从年利率转换为月利率
         //将年度赔付转换为月度赔付
 
-        var pinggu_num = parseFloat(pinggu.value);
+        // var pinggu_num = parseFloat(pinggu.value);
         var principal = parseFloat(amount.value);
         // var interest = parseFloat(apr.value) / 100 + 0.55 / 100;
         var interest = parseFloat(apr.value) / 100 ;
